assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Oswald&family=Permanent+Marker&family=Roboto+Condensed&family=Roboto:wght@100;300;400;500&family=Space+Mono&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*------------------------------Header------------------------------*/

header {
    background-color: #ff6000;
    z-index: 2;
    max-height: 140px;
}

.header-title {
    text-align: center;
    color: black;
}

.page-header {
    padding-top: 50px;
    padding-bottom: 50px;
    padding-left: 50px;
    justify-content: center;
}

.page-navigation-box {
    justify-content: right;
    padding-right: 20px;
}

#navbarNav {
    background-color: #ff6000;
    z-index: 2;
}

.page-navigation {
    padding-right: 20px;
}

.nav-text {
    color: black;
    font-size: 20px;
    font-family: "Roboto Condensed", sans-serif;
}

.how-to-title {
    font-size: 25px;
    font-family: "Roboto Condensed", sans-serif;
}

.country-title {
    font-size: 35px;
    font-family: "Roboto Condensed", sans-serif;
}

/*------------------------------Padding/Margins/Text------------------------------*/

body {
    background-color: #454545;
}

main {
    flex: 1;
}

.uppercase {
    text-transform: uppercase;
}

/*----Index----*/

.youtube-video-homepage {
    overflow:hidden;    
    padding-bottom:56.25%;    
    position:relative;    
    height:0;    
}

.youtube-video-homepage iframe {
    left:0;
    top:0;
    height:100%;
    width:100%;
    position:absolute;
}

/*--Snipped taken from adobe forum--*/

#about-the-netherlands-surround {
    border-color: #ff6000;
    border-style: solid;
    background-color: rgba(0, 0, 0, 0.20);
    border-radius: 30px;
    padding: 20px;
    margin-top: 30px;
}

.about-the-netherlands {
    color: #FFF6EC;
    font-family: "Roboto Condensed", sans-serif;
    text-align: center;
}

#why-wear-around-surround {
    border-color: #ff6000;
    border-style: solid;
    background-color: rgba(0, 0, 0, 0.20);
    border-radius: 30px;
    padding: 20px;
    margin-top: 30px;
}

.why-wear-orange {
        color: #FFF6EC;
        font-family: "Roboto Condensed", sans-serif;
        text-align: center;
    }

.why-were-orange-links {
    list-style-type: none;
    border: none;
    text-decoration: none;
    text-align: center;
}

.why-were-orange-links li a {
    color: #FFF6EC;
    text-decoration: none;
}

#netherlands-video {
    margin-top: 30px;
}

#video-source-credit {
    font-family: "Roboto Condensed", sans-serif;
    font-style: italic;
    font-size: 10px;
    color: #FFF6EC;
}

#video-source-credit a {
    text-decoration: none;
    color: #FFF6EC;
}

/*----Rotterdam----*/

.rotterdam-page-title {
    margin-top: 30px;
    margin-bottom: 30px;
    text-align: center;
    color: #ffe6c7;
    font-size: 50px;
    font-family: "Roboto Condensed", sans-serif;
}

#where-to-eat-rotterdam {
    border-color: #ff6000;
    border-style: solid;
    background-color: rgba(0, 0, 0, 0.20);
    border-radius: 30px;
    padding: 20px;
    margin-top: 30px;
    color: #FFF6EC;
    font-size: 15px;
    text-align: center;
    text-decoration: none;
    font-family: "Roboto Condensed", sans-serif;
}

#where-to-eat-rotterdam a {
    text-decoration: none;
    color: #FFF6EC;
    font-size: 20px;
    font-family: "Roboto Condensed", sans-serif;
}

#what-not-to-miss-rotterdam {
    border-color: #ff6000;
    border-style: solid;
    background-color: rgba(0, 0, 0, 0.20);
    border-radius: 30px;
    padding: 20px;
    margin-top: 30px;
    color: #FFF6EC;
    font-size: 15px;
    text-align: center;
    text-decoration: none;
    font-family: "Roboto Condensed", sans-serif;
}

#what-not-to-miss-rotterdam a {
    text-decoration: none;
    color: #FFF6EC;
    font-size: 20px;
    font-family: "Roboto Condensed", sans-serif;
}

#where-to-visit-rotterdam {
    border-color: #ff6000;
    border-style: solid;
    background-color: rgba(0, 0, 0, 0.20);
    border-radius: 30px;
    padding: 20px;
    margin-top: 30px;
    color: #FFF6EC;
    font-size: 15px;
    text-align: center;
    text-decoration: none;
    font-family: "Roboto Condensed", sans-serif;
}

#where-to-visit-rotterdam a {
    text-decoration: none;
    color: #FFF6EC;
    font-size: 20px;
    font-family: "Roboto Condensed", sans-serif;
}

#rotterdam-map {
    margin-top: 30px;
    margin-bottom: 10px; 
}

.rotterdam-map-frame {
    overflow: hidden;
    padding-bottom: 25%;
    position: relative;
    height: 0;
}

.rotterdam-map-frame iframe {
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    position: absolute;
}

/*----Utrecht----*/
 
.utrecht-page-title {
    margin-top: 30px;
    margin-bottom: 30px;
    text-align: center;
    color: #ffe6c7;
    font-size: 50px;
    font-family: "Roboto Condensed", sans-serif;
}

#where-to-eat-utrecht {
    border-color: #ff6000;
    border-style: solid;
    background-color: rgba(0, 0, 0, 0.20);
    border-radius: 30px;
    padding: 20px;
    margin-top: 30px;
    color: #FFF6EC;
    font-size: 15px;
    text-align: center;
    text-decoration: none;
    font-family: "Roboto Condensed", sans-serif;
}

#where-to-eat-utrecht a {
    text-decoration: none;
    color: #FFF6EC;
    font-size: 20px;
    font-family: "Roboto Condensed", sans-serif;
}

#what-not-to-miss-utrecht {
    border-color: #ff6000;
    border-style: solid;
    background-color: rgba(0, 0, 0, 0.20);
    border-radius: 30px;
    padding: 20px;
    margin-top: 30px;
    color: #FFF6EC;
    font-size: 15px;
    text-align: center;
    text-decoration: none;
    font-family: "Roboto Condensed", sans-serif;
}

#what-not-to-miss-utrecht a {
    text-decoration: none;
    color: #FFF6EC;
    font-size: 20px;
    font-family: "Roboto Condensed", sans-serif;
}
/* ... */

